--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <!-- 4 heading levels: -->
-    <img src="/home/shishir/Documents/Bit by Bit/project2/image/joker.png" alt="Kuch to galat hua "/>     
+    <img src="image/joker.png" alt="Kuch to galat hua "/>     
     <h1> Shishir Pandey </h1>
     <h3>Phone No: 7077102565 <br> Email ID: shishir198918@gmail.com</h3>
     <ul>
-        <li> <a href="/home/shishir/Documents/Bit by Bit/project2/templates/Projects.html">Technical Skills</a> </li>
-        <li><a href="/home/shishir/Documents/Bit by Bit/project2/templates/Technical_skill.html">Projects</a></li>
+        <li> <a href="templates/Technical_skill.html">Technical Skills</a> </li>
+        <li><a href="templates/Projects.html">Projects</a></li>
     
     </ul>
 
